--- a/package.json
+++ b/package.json
@@ -17,6 +17,18 @@
     "Starter Template",
     "Boilerplate"
   ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "author": "Zaid Makani",
   "license": "MIT",
   "dependencies": {
@@ -36,8 +48,10 @@
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -49,8 +63,16 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "4",
     "lint-staged": "^11.1.2",
+    "mini-css-extract-plugin": "^2.2.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-safe-parser": "^6.0.0",
     "prettier": "^2.3.2",
     "react-refresh": "^0.10.0",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "typescript": "^4.3.5",
     "webpack": "^5.49.0",
